Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92858

When connecting to a web socket server via a ngnix proxy then it will fail to connect since it is not requesting the authentication

XMLWordPrintable

    • da30f70fe (dev), edd1df7dc (dev), 8766aa3d1 (6.6)

      When connecting to a web socket server via a ngnix proxy then it will fail to connect since it is not requesting the authentication and it will either fail with ProxyAuthenticationRequired or ProxyProtocolError.

      To reproduce using the attached example which provides the proxy and a Python based websocket server then do the following:

      • Modify the nginx.conf file in nginx-1.18.0/conf to have the right path for the auth_basic_user_file entry
      • Modify the startnginx.bat file to have the right paths too
      • Run "python setup.py install" in simple-websocket-server
      • Run "python SimpleExampleServer.py" in simple-websocket-server/SimpleWebSocketServer
      • Run startnginx.bat
      • Build and run the example and try to connect to the server (the proxy is on 5000 and the server is 8000)

      Note that this is setup for Windows, but you may be able to get it running easily enough on other platforms

        1. qtbug92858.tar.gz
          3.77 MB
        2. qt6-version.tar.zst
          1.67 MB
        For Gerrit Dashboard: QTBUG-92858
        # Subject Branch Project Status CR V

            manordheim Mårten Nordheim
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes